--- a/.air.toml
+++ b/.air.toml
@@ -4,17 +4,17 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./main"
+  bin = "areweplaying"
   cmd = "make build"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
-  exclude_regex = ["_test.go", ".*_templ.go"]
+  exclude_regex = [".*_templ.go", "_test.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
   include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html", "templ"]
+  include_ext = ["go", "tpl", "tmpl", "templ", "html"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
