--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
+# If you prefer the allow list template instead of the deny list, see community template:
+# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+#
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+.DS_Store
 
-# Test binary, built with "go test -c"
+# Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
@@ -16,14 +20,7 @@
 
 # Go workspace file
 go.work
-tmp/
+go.work.sum
 
-# IDE specific files
-.vscode
-.idea
-
-# .env file
+# env file
 .env
-
-# Project build
-main
